Vista login completada y de seleccionar tipo de registro

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,10 +10,16 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Ilanguage">
         <activity
-            android:name=".login"
+            android:name=".details_signup"
             android:exported="true" />
         <activity
-            android:name=".MainActivity"
+            android:name=".select_signup"
+            android:exported="true" />
+        <activity
+            android:name=".login_inputs"
+            android:exported="true" />
+        <activity
+            android:name=".login"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -21,6 +27,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".MainActivity"
+            android:exported="true"></activity>
     </application>
 
 </manifest>
