--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,12 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Ilanguage">
         <activity
+            android:name=".login_info"
+            android:exported="true" />
+        <activity
+            android:name=".activity_details_personal"
+            android:exported="true" />
+        <activity
             android:name=".details_signup"
             android:exported="true" />
         <activity
@@ -29,7 +35,7 @@
         </activity>
         <activity
             android:name=".MainActivity"
-            android:exported="true"></activity>
+            android:exported="true" />
     </application>
 
 </manifest>
