--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,11 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Ilanguage">
         <activity
+            android:name=".editprofile"
+            android:exported="true" ></activity>
+
+
+        <activity
             android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
