feature: se agrego el flujo a los activities description: se agrego el flujo a los activities desde el logina hasta el editar perfil

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,13 +22,12 @@
             android:exported="true">
         </activity>
         <activity
-
             android:name=".editprofile"
-        android:exported="true" >
+            android:parentActivityName=".ProfileViewActivity" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVYTY"
+                android:value=".ProfileViewActivity"/>
         </activity>
-
-
-
         <activity
             android:name=".MainActivity"
             android:exported="true">
