--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,12 +4,12 @@ plugins {
 }
 
 android {
-    compileSdk 30
+    compileSdk 25
 
     defaultConfig {
         applicationId "com.example.ilanguage"
-        minSdk 24
-        targetSdk 30
+        minSdk 14
+        targetSdk 25
         versionCode 1
         versionName "1.0"
 
@@ -40,4 +40,5 @@ dependencies {
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    implementation 'com.prolificinteractive:material-calendarview:1.4.2'
 }
