--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,7 +7,7 @@ android {
     compileSdk 31
 
     defaultConfig {
-        applicationId "com.example.tp"
+        applicationId "com.example.ilanguage"
         minSdk 24
         targetSdk 31
         versionCode 1
