--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Tp">
         <activity
+            android:name=".termConditions"
+            android:exported="true" />
+        <activity
             android:name=".profile_teacher"
             android:parentActivityName=".MainMenuActivity">
             <meta-data
@@ -27,7 +30,7 @@
         </activity>
         <activity
             android:name=".MainMenuActivity"
-            android:exported="true"></activity>
+            android:exported="true" />
         <activity
             android:name=".editprofile"
             android:parentActivityName=".ProfileViewActivity">
@@ -37,7 +40,7 @@
         </activity>
         <activity
             android:name=".MainActivity"
-            android:exported="true"></activity>
+            android:exported="true" />
         <activity
             android:name=".activity_details_personal"
             android:exported="true" />
